# machine-health-monitoring-impl

./: .gitmodules  CMakeLists.txt  README.md  build_debug.sh  build_release.sh
client/: CMakeLists.txt
client/include/: CPUMonitor.hpp  Hello.hpp  MQTTConn.hpp
client/lib/: CPUMonitor.cpp  Hello.cpp  entry.cpp
installers/: jsoncpp_installer.sh  mongo_c_installer.sh  paho_mqtt_c_installer.sh
server/: CMakeLists.txt
server/include/: MQTTConn.hpp  MongoConn.hpp
server/lib/: MQTTConn.cpp  MongoConn.cpp
